force-app/main/default/objects/ssot__SocialMessageEngagement__dlm/fields/ssot__EngagementActionId__c.field-meta.xml
<CustomField>
    <fullName>ssot__EngagementActionId__c</fullName>
    <label>Engagement Action</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EngagementActionId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>