force-app/main/default/objects/ssot__SocialMessageEngagement__dlm/fields/ssot__PersonalizationRequestId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PersonalizationRequestId__c</fullName>
    <label>Personalization Request Id</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PersonalizationRequestId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>