force-app/main/default/objects/ssot__SocialMessageEngagement__dlm/fields/ssot__ReferringSocialNetworkName__c.field-meta.xml
<CustomField>
    <fullName>ssot__ReferringSocialNetworkName__c</fullName>
    <label>Referring Social Network</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ReferringSocialNetworkName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>