force-app/main/default/objects/ssot__SocialMessageEngagement__dlm/fields/ssot__rel_1720024280804_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1720024280804_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SocialMessageEngagement_EngagementAc_rel</label>
    <referenceTo>ssot__EngagementAction__dlm</referenceTo>
    <relationshipLabel>SocialMessageEngagement_EngagementAc_rel</relationshipLabel>
    <relationshipName>rel_1720024280804_end</relationshipName>
    <type>Lookup</type>
</CustomField>