force-app/main/default/objects/ssot__SocialMessageEngagement__dlm/fields/ssot__rel_1731039994166_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1731039994166_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SocialMessageEngagement_UtmId_map_Ca_rel</label>
    <referenceTo>ssot__Campaign__dlm</referenceTo>
    <relationshipLabel>SocialMessageEngagement_UtmId_map_Ca_rel</relationshipLabel>
    <relationshipName>rel_1731039994166_end</relationshipName>
    <type>Lookup</type>
</CustomField>