force-app/main/default/objects/ssot__SocialMessageEngagement__dlm/fields/ssot__rel_1732260241668_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1732260241668_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SocialMessageEngagement_IndividualId_rel</label>
    <referenceTo>ssot__Individual__dlm</referenceTo>
    <relationshipLabel>SocialMessageEngagement_IndividualId_rel</relationshipLabel>
    <relationshipName>rel_1732260241668_end</relationshipName>
    <type>Lookup</type>
</CustomField>