force-app/main/default/objects/ssot__SocialMessageEngagement__dlm/fields/ssot__SocialMessageId__c.field-meta.xml
<CustomField>
    <fullName>ssot__SocialMessageId__c</fullName>
    <label>Social Message</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SocialMessageId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>