force-app/main/default/objects/ssot__SocialMessageEngagement__dlm/fields/ssot__UniqueSocialInteractionsCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__UniqueSocialInteractionsCount__c</fullName>
    <label>Unique Social Interactions Count</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>UniqueSocialInteractionsCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>