force-app/main/default/objects/ssot__SocialMessageEngagement__dlm/fields/ssot__UtmTermDescription__c.field-meta.xml
<CustomField>
    <fullName>ssot__UtmTermDescription__c</fullName>
    <label>UTM Term</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>UtmTermDescription</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>